# rwkv-mobile

./: .gitignore  CMakeLists.txt  README.md
backends/web-rwkv/: Cargo.toml  web_rwkv_backend.h  web_rwkv_ffi.h
backends/web-rwkv/src/: lib.rs  web_rwkv_backend.cpp
examples/: gen.cpp
examples/flutter/ffigen/: pubspec.yaml  rwkv_mobile.dart
src/: backend.h  c_api.cpp  c_api.h  commondef.h  logger.h  model.h  runtime.cpp  runtime.h  sampler.cpp  sampler.h  sampler.hpp  test.cpp  tokenizer.cpp  tokenizer.h  tokenizer.hpp  trie.hpp
